disable reveal layout (should fix some layout issues

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,3 @@
-
 :root {
     --esn-dark-blue: #2E3192;
     --esn-cyan: #00AEEF;
@@ -11,7 +10,8 @@ section :is(h1, h2, h3, h4, h5, h6) {
     font-weight: 700 !important;
 }
 
-section div, section p {
+section div,
+section p {
     font-family: 'Kelson Sans', sans-serif !important;
 }
 
@@ -94,16 +94,16 @@ section img {
     justify-content: center;
 }
 
-.topic > * {
+.topic>* {
     margin: 0;
     color: var(--esn-cyan);
 }
 
-.topic > h2 {
+.topic>h2 {
     color: white;
 }
 
-.topic > h3 {
+.topic>h3 {
     color: var(--esn-magenta);
 }
 
@@ -142,4 +142,17 @@ section img {
 .question-body {
     flex-grow: 1;
     padding: 50px;
+    background-color: white;
+}
+
+.question{
+  padding: 50px;
+  background-color: var(--esn-cyan);
+  display:flex;
+  flex-direction: column;
+  height: calc(100vh - 150px);
+}
+
+.present{
+  background-color: var(--esn-cyan);
 }
